# elevenlabs-webui-client

./: .env.example  .gitignore  INSTALL.md  README.md  pyproject.toml
src/elevenlabs_webui_client/: __init__.py  cli.py  client.py
tests/: test_cli.py  test_client.py
